tests/specs/ecosystem/bureaudouble/outils/0_0_62.test
bureaudouble/outils/0.0.62
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'HTMLElement'.
export const partialTrigger = (node: HTMLElement, {}: {
                                     ~~~~~~~~~~~
    at file://<tmpdir>/fresh/createPartial.ts:1:38

